etc/k8s/namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: 20250701-honeyhive-solution
  labels:
    name: 20250701-honeyhive-solution
